--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <title>ThreeJS Starter</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Take the treck</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ex, pariatur cum distinctio nemo inventore eaque officiis modi ipsam tenetur cupiditate accusamus aliquid velit. Molestiae cumque enim perspiciatis quo soluta!</p>
+        <button>Go Biking</button>
+    </div>
     <canvas class="webgl"></canvas>
 </body>
 </html>
